--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,3 @@
-os: Visual Studio 2014 CTP4
 version: "{build}"
 build: off
 platform:
@@ -10,7 +9,8 @@ environment:
     - nodejs_version: "8"
 
 install:
-  - ps: Install-Product node $env:nodejs_version $env:nodejs_arch
+  - ps: Install-Product node $env:nodejs_version $env:platform
+  - ps: if ($env:nodejs_version -eq "5") { npm i npm@latest -g }
   - set PATH=%APPDATA%\npm;%APPVEYOR_BUILD_FOLDER%\node_modules\.bin;%PATH%
   - npm install --msvs_version=2013
 
